# decays

./: Cargo.toml  Makefile  package-lock.json  pnpm-lock.yaml
hello-world/src/: main.rs
migrations/: users.sql
public/css/: app.css
resources/views/: welcome.blade.php
src/: controllers.rs  error.rs  main.rs  utils.rs
src/controllers/: auth.rs  info.rs  user.rs
src/models/: auth.rs
